Tests and coins

--- a/Assets/Scripts/EditModeTests/EditModeTests.asmdef
+++ b/Assets/Scripts/EditModeTests/EditModeTests.asmdef
@@ -4,7 +4,8 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "ScriptsCore",
-        "Unity.InputSystem"
+        "Unity.InputSystem",
+        "Unity.InputSystem.TestFramework"
     ],
     "includePlatforms": [
         "Editor"
