--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.test-framework": "1.1.33",
+    "com.unity.ext.nunit": "1.0.6",
     "com.unity.textmeshpro": "2.1.1",
     "com.unity.timeline": "1.2.18",
     "com.unity.ugui": "1.0.0",
